feat: parse poster field from bounty API and display From poster under title in book