@@ -470,8 +470,8 @@ public class PlayerActivityListener {
             java.util.List<String> rewardLinesWrapped = wrapTextWithOffset(rewardText, maxLineWidth, 8); // "Reward: " is 8 chars
             int rewardLines = Math.max(1, rewardLinesWrapped.size());
 
-            // Total budget for title + description = maxLines - 3 - rewardLines
-            int combinedBudget = maxLines - 3 - rewardLines;
+            // Total budget for title + description = maxLines - 4 - rewardLines
+            int combinedBudget = maxLines - 4 - rewardLines;
             if (combinedBudget < 2) {
                 combinedBudget = 2; // fallback safety
             }
@@ -479,7 +479,7 @@ public class PlayerActivityListener {
             // Allocate at most 2 lines for the title
             int maxTitleLines = 2;
             java.util.List<String> tempTitleLines = wrapTextWithOffset(bounty.title(), maxLineWidth, 0); // No offset since no label
-            int titleLines = Math.min(maxTitleLines, Math.max(1, tempTitleLines.size()));
+            int titleLines = Math.clamp(tempTitleLines.size(), 1, maxTitleLines);
 
             // Remaining budget goes to description
             int descBudget = combinedBudget - titleLines;
@@ -494,6 +494,8 @@ public class PlayerActivityListener {
 
             net.minecraft.network.chat.MutableComponent page = Component.literal("=== CONTRACT ===\n").withStyle(ChatFormatting.GOLD);
             page.append(Component.literal(finalTitle + "\n").withStyle(style -> style.withColor(ChatFormatting.DARK_BLUE).withUnderlined(true)));
+            page.append(Component.literal("From: ").withStyle(ChatFormatting.DARK_GRAY));
+            page.append(Component.literal(bounty.poster() + "\n").withStyle(ChatFormatting.BLACK));
             page.append(Component.literal(finalDesc + "\n").withStyle(ChatFormatting.ITALIC, ChatFormatting.BLACK));
 
             page.append(Component.literal("Reward: ").withStyle(ChatFormatting.DARK_GRAY));
